fixed loader and spacing

--- a/static/style.sass
+++ b/static/style.sass
@@ -242,7 +242,7 @@ table
             padding-bottom: 0
 
 .sublist
-    margin-left: 30px
+    margin-left: 25px
     &:last-child .entry:last-child
         padding-bottom: 0
 
@@ -280,7 +280,7 @@ table
     a
         color: var(--gray)
         float: left
-        margin-right: 15px
+        margin-right: 10px
         &:first-child
             float: right
             margin-right: 0
